th left-align; fixes #29

--- a/examples/index.less
+++ b/examples/index.less
@@ -156,6 +156,7 @@ header.links {
 
   // validation table styles
   .validationTable {
+    text-align: left;
     tr:nth-child(1) {
       td:nth-child(4) {
         border-top: none;
@@ -183,7 +184,6 @@ header.links {
       border-top: 1px solid #DDD;
     }
   }
-
 }
 
 /*********************************************************
